about page rename

--- a/card16.html
+++ b/card16.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./About us .html">About Us</a>
+              <a class="nav-link" href="./About_us.html">About Us</a>
             </li>
             <li class="nav-item dropdown" >
               <a class="nav-link dropdown-toggle" href="#" id="nav" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -131,10 +131,10 @@
       <h5 style="color: rgb(57, 20, 193);">INFORMATION</h5>
       <ul class="nav flex-column">
         
-        <li class="nav-item mb-2"><a href="./About us .html" class="nav-link p-0 text-muted">About Us</a></li>
-        <li class="nav-item mb-2"><a href="./Contact us.html" class="nav-link p-0 text-muted">Contact us</a></li>
+        <li class="nav-item mb-2"><a href="./About_us.html" class="nav-link p-0 text-muted">About Us</a></li>
+        <li class="nav-item mb-2"><a href="./Contact_us.html" class="nav-link p-0 text-muted">Contact us</a></li>
         <li class="nav-item mb-2"><a href="./company.html" class="nav-link p-0 text-muted">Company</a></li>
-        <li class="nav-item mb-2"><a href="./About us .html" class="nav-link p-0 text-muted">Over Teams</a></li>
+        <li class="nav-item mb-2"><a href="./About_us.html" class="nav-link p-0 text-muted">Over Teams</a></li>
       </ul>
     </div>
 
