--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./About us .html">About Us</a>
+              <a class="nav-link" href="./About_us.html">About Us</a>
             </li>
             <li class="nav-item dropdown" >
               <a class="nav-link dropdown-toggle" href="#" id="nav" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -245,7 +245,7 @@
     The company advertises by handing out leaflets, v.v. Due to the rapid development of the internet field in this day and age,<br>
           the company decided to establish a website where people will get all the information about the product is different each other is<br> 
           available to them easily and quickly...</p>
-          <center><button style="border-radius: 11px; border: 2px solid rgb(57, 20, 193); margin-bottom: 50px; " id="btn1" ><a href="./About us .html" style="text-decoration: none; " class="text-dark">&nbsp;&nbsp;Reade More&nbsp;&nbsp;</a></center>
+          <center><button style="border-radius: 11px; border: 2px solid rgb(57, 20, 193); margin-bottom: 50px; " id="btn1" ><a href="./About_us.html" style="text-decoration: none; " class="text-dark">&nbsp;&nbsp;Reade More&nbsp;&nbsp;</a></center>
           <hr ></center>
 
 
@@ -293,7 +293,7 @@
            <!-- about start  -->
           <h1 class="text-center" style="color: rgb(57, 20, 193);">ABOUT US</h1>
           <p class="text-center" style="margin-left: 50px; margin-right: 50px;">Ryana Calendars is selling Calendar and Diary products. The company advertises by distributing leaflets, printing in newspapers, v.v. However, due to the rapid development of the internet sector in this day and age, almost everyone is focused on technology. And so we decided to set up a website where people will get all the information about different products easily, quickly and appropriately. We who make these calendars and diaries strive to develop and bring the best sense of product selection and reference to users.</p>
-          <center><button style="border-radius: 12px ;border: 3px  solid rgb(57, 20, 193); width: 100px;" id="btn7"><a href="./About us .html" style="color: black;">Read More</a></button></center><br>
+          <center><button style="border-radius: 12px ;border: 3px  solid rgb(57, 20, 193); width: 100px;" id="btn7"><a href="./About_us.html" style="color: black;">Read More</a></button></center><br>
           <!-- about end  -->
 
 
@@ -318,10 +318,10 @@
                 <h5 style="color: rgb(57, 20, 193);">INFORMATION</h5>
                 <ul class="nav flex-column">
                   
-                  <li class="nav-item mb-2"><a href="./About us .html" class="nav-link p-0 text-muted">About Us</a></li>
-                  <li class="nav-item mb-2"><a href="./Contact us.html" class="nav-link p-0 text-muted">Contact us</a></li>
+                  <li class="nav-item mb-2"><a href="./About_us.html" class="nav-link p-0 text-muted">About Us</a></li>
+                  <li class="nav-item mb-2"><a href="./Contact_us.html" class="nav-link p-0 text-muted">Contact us</a></li>
                   <li class="nav-item mb-2"><a href="./company.html" class="nav-link p-0 text-muted">Company</a></li>
-                  <li class="nav-item mb-2"><a href="./About us .html" class="nav-link p-0 text-muted">Over Teams</a></li>
+                  <li class="nav-item mb-2"><a href="./About_us.html" class="nav-link p-0 text-muted">Over Teams</a></li>
                 </ul>
               </div>
           
