--- a/About_us.html
+++ b/About_us.html
@@ -44,7 +44,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="./Contact us.html" tabindex="-1" >Contact us</a>
+              <a class="nav-link " href="./Contact_us.html" tabindex="-1" >Contact us</a>
             </li>
           </ul>
         </div>
