--- a/card.html
+++ b/card.html
@@ -183,7 +183,7 @@
           <ul class="nav flex-column">
             
             <li class="nav-item mb-2"><a href="./About_us.html" class="nav-link p-0 text-muted">About Us</a></li>
-            <li class="nav-item mb-2"><a href="./Contact us.html" class="nav-link p-0 text-muted">Contact us</a></li>
+            <li class="nav-item mb-2"><a href="./Contact_us.html" class="nav-link p-0 text-muted">Contact us</a></li>
             <li class="nav-item mb-2"><a href="./company.html" class="nav-link p-0 text-muted">Company</a></li>
             <li class="nav-item mb-2"><a href="./About_us_.html" class="nav-link p-0 text-muted">Over Teams</a></li>
           </ul>
